--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 #!/usr/bin/bash 
-ssh root 65.2.185.165
+sshpass -e ssh root@65.2.185.165 -pDocker@098
 sudo chown -R $(whoami):$(whoami) /opt
 cd /opt/git
 git clone https://github.com/LanDevops/DockerTesting
